--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </router-link> 
                 </li>
                 <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
+                <a class="nav-link disabled" href="#">Saved</a>
                 </li> 
             </ul>
             </div>
