--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="csrf-token" content="{{ csrf_token() }}">
 
   <!-- Vue -->
-	<script src="https://unpkg.com/vue@3"></script>
+	<script src="static/js/vue3.js"></script>
   <script src="https://unpkg.com/vue-router@4"></script>
 
 
@@ -75,6 +75,9 @@
   <script>
     var logged = false;
     var logged_user = null;
+    var loaded = false;
+
+   
   </script>
  
 </html>
